# PF_V02

./: Anchor.toml  Cargo.toml  Note  another-wallet.json  create_tokens.py  details.txt  id.json  listAccountsDevnet.js  new-wallet.json  note.txt  package-lock.json  package.json  path_to_local_idl_file.json  run.sh
.config/: Note
.config/solana/: id.json
app/: .env  config-overrides.js  consolidated_output.txt  idl.json  package-lock.json  package.json  run.sh  tailwind.config.js  test.js
app/public/: tokens_dummy_data.json
app/server/: .env  index.js  package-lock.json  package.json
app/server/idl/: solana_amm.json
app/src/: App.css  App.js  TokenSelectionModal.js  index.js  js_css_files_with_content.txt  run.sh  tokenService.js
app/src/components/: ConnectButton.js  Header.js  Header.scss  MobileNavBar.js  MobileNavBar.scss  WalletProvider.js
app/src/context/: ConnectionContext.js  ModalContext.js  NotificationContext.js  PriceContext.js
app/src/utils/: anchorProvider.js  config.js  poolInteraction.js
app_v01/: compiled_js_css.txt  compiled_texts.txt  config-overrides.js  package-lock.json  package.json  run.sh
app_v01/src/: App.css  App.js  index.js
app_v01/src/components/: Banner.js  Card.js  Footer.js  Header.js  Settings.js  SwapComponent.js  TokenDropdown.js  WalletSelector.js  connectors.js
app_v01/src/context/: SolanaWalletProvider.js  ThemeContext.js
app_v01/src/styles/: Banner.css  Content.module.css  global.css  (+5 more)
programs/solana-amm-v02/: Anchor.toml  Cargo.toml
programs/solana-amm-v02/src/: lib.rs
tests/: solana-amm-v02.ts
(+44 files in other folders)
