[package]
name = "solana_amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "4.0.3"
mpl-token-metadata = "5.1.0"
num-bigint = "0.4"
num-traits = "0.2"

[patch.crates-io]
spl-token = "4.0.3"
solana-pubkey = "2.1.5"
mpl-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "main" }
solana-program = { version = "1.18.26", features = ["no-entrypoint"] }
